--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,94 +1,134 @@
 .navbar {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  box-shadow: 0 1px 3px -2px black;
-  background: darkgoldenrod;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    box-shadow: 0 1px 3px -2px black;
+    background: darkgoldenrod;
 }
 .navbar {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .nav-logo p {
-  color: black;
-  font-size: 38px;
-  font-weight: 600;
+    color: black;
+    font-size: 38px;
+    font-weight: 600;
 }
 
 .nav-logo img {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 80px;
-  width: 80px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    width: 80px;
 }
 .nav-menu {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  list-style: none;
-  color: black;
-  font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    list-style: none;
+    color: black;
+    font-weight: 500;
 }
 
 .nav-menu li {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  padding-right: 30px;
-  cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    padding-right: 30px;
+    cursor: pointer;
 }
 .nav-menu li a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 .nav-menu hr {
-  border: none;
-  width: 80%;
-  height: 3px;
-  border-radius: 10px;
-  background: black;
+    border: none;
+    width: 80%;
+    height: 3px;
+    border-radius: 10px;
+    background: black;
 }
 
 .nav-login-cart {
-  display: flex;
-  align-items: center;
-  gap: 45px;
+    display: flex;
+    align-items: center;
+    gap: 45px;
 }
 
 .nav-login-cart button {
-  width: 157px;
-  height: 58px;
-  outline: none;
-  border: 1px solid #7a7a7a;
-  border-radius: 75px;
-  color: goldenrod;
-  font-size: 20px;
-  font-weight: 500;
-  background: black;
-  cursor: pointer;
+    width: 157px;
+    height: 58px;
+    outline: none;
+    border: 1px solid #7a7a7a;
+    border-radius: 75px;
+    color: goldenrod;
+    font-size: 20px;
+    font-weight: 500;
+    background: black;
+    cursor: pointer;
 }
 
 .nav-login-cart button:hover {
-  background: white;
-  color: black;
+    background: white;
+    color: black;
 }
 
 .nav-cart-count {
-  width: 22px;
-  height: 22px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: -35px;
-  margin-left: -55px;
-  border-radius: 11px;
-  font-size: 18px;
-  font-weight: bold;
-  background: black;
-  color: darkgoldenrod;
+    width: 22px;
+    height: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -35px;
+    margin-left: -55px;
+    border-radius: 11px;
+    font-size: 18px;
+    font-weight: bold;
+    background: black;
+    color: darkgoldenrod;
+}
+
+.nav-toggle-btn {
+    display: none;
+}
+
+/* =======MEDIA QUERIES======  */
+
+@media screen and (max-width: 600px) {
+    .hamburger-menu {
+        margin-left: 200px;
+    }
+    .nav-toggle-btn {
+        display: inline;
+        background: transparent;
+        cursor: pointer;
+    }
+
+    .nav-menu {
+        flex-direction: column;
+        padding-bottom: 3rem;
+        background-color: darkgoldenrod;
+        width: fit-content;
+    }
+
+    .nav-menu li {
+        margin-top: 50px;
+        margin-left: 200px;
+    }
+
+    .nav-login-cart {
+        padding-bottom: 60px;
+    }
+
+    .show-nav {
+        display: flex;
+    }
+    .hide-nav {
+        display: none;
+    }
 }
